--- a/Section-3/Module-3.Rmd
+++ b/Section-3/Module-3.Rmd
@@ -1,1 +1,66 @@
+---
+title: "R Notebook"
+output: html_notebook
+---
+
+This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code.
+
+```{r section-3}
+
+vect <- c(45,7,56)
+vect[1] # we use 1 as the starting index in vectors in R
+
+# several functions
+
+# ?seq()
+
+seq(-1,15)
+# ?is.numeric
+
+```
+
+FINANCIAL STATEMENT ANALYSIS Section - 3 Homework
+
+You have been supplied with two vectors of data: monthly revenue and monthly expenses for the financial year in question. Your task is to calculate the following financial metrics:
+- profit for each month- profit after tax for each month (the tax rate is 30%)
+- profit margin for each month - equals to profit a after tax divided by revenue
+- good months - where the profit after tax was greater than the mean for the year
+- bad months - where the profit after tax was less than the mean for the year
+- the best month - where the profit after tax was max for the year
+- the worst month - where the profit after tax was min for the year
+
+
+```{r}
+
+#Data
+revenue <- c(14574.49, 7606.46, 8611.41, 9175.41, 8058.65, 8105.44, 11496.28, 9766.09, 10305.32, 14379.96, 10713.97, 15433.50)
+expenses <- c(12051.82, 5695.07, 12319.20, 12089.72, 8658.57, 840.20, 3285.73, 5821.12, 6976.93, 16618.61, 10054.37, 3803.96)
+
+profits <- revenue - expenses
+
+profits.after.tax <- profits*(0.7)
+
+profit.margin <- (profits.after.tax / revenue) * 100
+
+good.months <- which(profits.after.tax > mean(profits.after.tax))
+
+bad.months <- seq(1,12)[-good.months]
+
+best.month <- which(profits.after.tax == max(profits.after.tax)
+                    )
+
+worst.month <- which(profits.after.tax == min(profits.after.tax))
+
+answers <- list()
+
+answers$profits <- profits
+answers$PAT <- profits.after.tax
+answers$ProfitMargin <- profit.margin
+answers$GoodMonths <- good.months
+answers$BadMonths <- bad.months
+answers$BestMonth <- best.month
+answers$WorstMonth <- worst.month
+
+print(answers)
+```
 
